--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet" />
 
 		<link rel="stylesheet" href="styles/fontes.css" />
-		<link rel="stylesheet" href="styles/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="styles/reset.css" />
 		<link rel="stylesheet" href="styles/responsividade.css">
 	</head>
