--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<link rel="shortcut icon" href="src/favicon.png" type="image/x-icon" />
 		<link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet" />
 
-		<link rel="stylesheet" href="styles/fontes.css" />
+		<link rel="stylesheet" href="fontes.css" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="styles/reset.css" />
-		<link rel="stylesheet" href="styles/responsividade.css">
+		<link rel="stylesheet" href="reset.css" />
+		<link rel="stylesheet" href="responsividade.css">
 	</head>
 	<body>
 		<header class="cabecalho">
