--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>GRAND THEFT AUTO</title>
-		<link rel="shortcut icon" href="src/favicon.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 		<link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet" />
 
 		<link rel="stylesheet" href="fontes.css" />
@@ -15,9 +15,9 @@
 	<body>
 		<header class="cabecalho">
 			<div class="logo">
-				<img src="src/logo-rockstar.svg" alt="Logo Rockstar Games" />
+				<img src="logo-rockstar.svg" alt="Logo Rockstar Games" />
 				<hr />
-				<img src="src/logo-gta.svg" alt="Logo GTA V" />
+				<img src="logo-gta.svg" alt="Logo GTA V" />
 			</div>
 			<nav>
 				<ul class="menu">
@@ -28,18 +28,18 @@
 						<a href="#comprar">Comprar</a>
 					</li>
 					<li>
-						<a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte <img src="src/icone-link.svg" alt="Icone de link de suporte" /></a>
+						<a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte <img src="icone-link.svg" alt="Icone de link de suporte" /></a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<main class="home" id="home">
-			<img class="imagem-fundo" src="src/bg-main.png" alt="Rapaz de moletom laranja ao lado de um carro esportivo amarelo" />
+			<img class="imagem-fundo" src="bg-main.png" alt="Rapaz de moletom laranja ao lado de um carro esportivo amarelo" />
 
 			<div class="informacoes">
 				<div class="lista-de-jogos">
-					<img src="src/logo-gta-v.svg" alt="Logo GTA V" />
-					<img src="src/logo-gta-online.svg" alt="Logo GTA Online" />
+					<img src="logo-gta-v.svg" alt="Logo GTA V" />
+					<img src="logo-gta-online.svg" alt="Logo GTA Online" />
 				</div>
 				<h1 class="titulo">Já disponíveis para Playstation 5 e Xbox Series X|S</h1>
 				<p class="texto">Experimente os fênomenos de entretenimento Grand Theft Auto V e GTA Online</p>
@@ -50,7 +50,7 @@
 		<section class="compre-ja" id="comprar">
 			<h2 class="titulo">Compre já</h2>
 			<div class="cartao">
-				<img class="capa-do-jogo" src="src/gta5.jpg" alt="Capa do jogo GTA V" />
+				<img class="capa-do-jogo" src="gta5.jpg" alt="Capa do jogo GTA V" />
 
 				<div class="informacoes">
 					<h3>Grand Theft Auto V</h3>
@@ -60,19 +60,19 @@
 					</p>
 					<ul class="plataformas">
 						<li>
-							<img src="src/logo-ps5.svg" alt="Logo Playstation 5" />
+							<img src="logo-ps5.svg" alt="Logo Playstation 5" />
 						</li>
 						<li>
-							<img src="src/logo-xbox-series-s.svg" alt="Logo Xbox series X|S" />
+							<img src="logo-xbox-series-s.svg" alt="Logo Xbox series X|S" />
 						</li>
 						<li>
-							<img src="src/logo-ps4.svg" alt="Logo Playstation 4" />
+							<img src="logo-ps4.svg" alt="Logo Playstation 4" />
 						</li>
 						<li>
-							<img src="src/logo-xbox-one.svg" alt="Logo Xbox One" />
+							<img src="logo-xbox-one.svg" alt="Logo Xbox One" />
 						</li>
 						<li>
-							<img src="src/logo-pc.svg" alt="Logo PC" />
+							<img src="logo-pc.svg" alt="Logo PC" />
 						</li>
 					</ul>
 				</div>
@@ -81,19 +81,19 @@
 
 					<ul class="plataformas">
 						<li>
-							<img src="src/logo-ps5.svg" alt="Logo Playstation 5" />
+							<img src="logo-ps5.svg" alt="Logo Playstation 5" />
 						</li>
 						<li>
-							<img src="src/logo-xbox-series-s.svg" alt="Logo Xbox series X|S" />
+							<img src="logo-xbox-series-s.svg" alt="Logo Xbox series X|S" />
 						</li>
 						<li>
-							<img src="src/logo-ps4.svg" alt="Logo Playstation 4" />
+							<img src="logo-ps4.svg" alt="Logo Playstation 4" />
 						</li>
 						<li>
-							<img src="src/logo-xbox-one.svg" alt="Logo Xbox One" />
+							<img src="logo-xbox-one.svg" alt="Logo Xbox One" />
 						</li>
 						<li>
-							<img src="src/logo-pc.svg" alt="Logo PC" />
+							<img src="logo-pc.svg" alt="Logo PC" />
 						</li>
 					</ul>
 				</button>
